--- a/index.html
+++ b/index.html
@@ -1,32 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Sign in &middot; </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <head>
+        <meta charset="utf-8">
+        <title>Sign in &middot; </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link href="mylogin_style.css" rel="stylesheet">
+    </head>
 
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <body>
 
-    <link href="mylogin_style.css" rel="stylesheet">
-</head>
+        <div class="container">
+            <form class="form-signin">
+                <h2 class="form-signin-heading text-info">Sign In</h2>
+                <div class="form-group">
+                    <label>E-mail</label>
+                    <input type="email" name="mymail" placeholder="email@domain.com" class="form-control" required="">
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" name="mypass" placeholder="My secret password" class="form-control" required="">
+                </div>
+                <div class="form-group">
+                    <label class="checkbox">
+                        <input type="checkbox" value="remember-me"> Remember me
+                    </label>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-large btn-primary" type="submit">Sign in</button>
+                </div>
+                <div class="form-group">
+                    <a class="popup-text" href="#register-dialog" data-effect="mfp-zoom-out">Not a member yet</a>
+                    <a class="popup-text" href="#password-recover-dialog" data-effect="mfp-zoom-out">Forgot password</a>
+                </div>
+            </form>
 
-<body>
+        </div>
 
-<div class="container">
-
-    <form class="form-signin">
-        <h2 class="form-signin-heading">Sign In</h2>
-        <input type="text" class="input-block-level" placeholder="Email address">
-        <input type="password" class="input-block-level" placeholder="Password">
-        <label class="checkbox">
-            <input type="checkbox" value="remember-me"> Remember me
-        </label>
-        <button class="btn btn-large btn-primary" type="submit">Sign in</button>
-    </form>
-
-</div>
-
-</body>
+    </body>
 </html>
